src/styling/Mapside.scss
.MapsideWrapper {
  background-color: rgb(241, 250, 238, 0.9);
  color: #1d3557;
  border-left: solid #a8dadc 0.5px;
  position: absolute;
  width: 35rem;
  z-index: 1;
  right: 0%;
  min-height: 100vh;
  backdrop-filter: blur(5px);
  transition: 0.35s all ease-in;

  .MapsideHeader {
    display: flex;
    border-bottom: 1px solid black;
    height: 3rem;
    transition: all 0.6s ease-in;
    .headerelement {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 50%;
      cursor: pointer;
    }
  }

  .container {
    padding-top: 1rem;
    width: 95%;
    margin: 0 auto;

    h2,
    h3 {
      opacity: 1;
      transition: all 0.35s ease-in;
      &:first-child {
        margin-bottom: 0.3rem;
        margin-left: 0.2rem;
      }
    }
    p {
      opacity: 1;
      transition: all 0.13s ease-in;
    }

    .toggleInfo {
      display: flex;
      height: 5rem;
      width: 5rem;
      border-radius: 45px;
      background-color: white;
      justify-content: center;
      align-items: center;
      position: absolute;
      left: -4.4rem;
      top: 49vh;
      background-color: rgb(249, 87, 56, 0.7);
      cursor: pointer;

      .toggleArea {
        color: white;
      }
    }
  }
}

.passiveWrapper {
  width: 0rem;
  backdrop-filter: blur(0px);
  transition: all 0.35s ease-in;
  border-left: none;
  .MapsideHeader {
    opacity: 0;
    transition: all 0.4s ease-in;
  }
  .container {
    h2,
    h3 {
      opacity: 0;
      transition: all 0.35s ease-in;
    }
    p {
      opacity: 0;
      transition: all 0.13s ease-in;
    }
  }
}

.active {
  background-color: rgb(249, 87, 56, 0.7);
  color: white;
}

